"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

Per-character keybind support.
gtk-v2/src/keys.c: In save_keys() and keys_init(), a pointless #ifdef WIN32
  was used to attempt to implement per-character keybind files but keys_init()
  is called long before a player can log in, so this had the effect of writing
  keybinds to a file that cannot be loaded.  Oddly, this was under a #ifdef
  WIN32 which is quite inappropriate as if supported, it should be for all
  platforms.  The support is commented out with #if 0 until it can be fixed
  and then re-enabled for all clients. Meanwhile, it surely fixes a WIN32 bug.
Kevin Bulgrien 2008-01-18

common/image.c README: Rename client '.crossfire/crossfire-images/' to
  '.crossfire/image-cache/' to make backups avoid backing it up with a
  generic exclude like "*/*cache*/*" that works for many other packages
  that employ caching.  Included on branch to avoid having two separate
  caches if running both versions of clients for testing.
Kevin Bulgrien 2008-01-05

Fix include order.
 common/metaserver.c
Nicolas Weeger 2008-01-03

Win32 compilation fixes. Remove superflous includes messing everything.
 common/client.c commands.c item.c metaserver.c newsocket.c p_cmd.c player.c script.c
 gtk/win32/config.h porting.c
Nicolas Weeger 2008-01-03

Fix for bug #1825653: Odd number problem with nrof.
 common/item.c: nrof is unsigned int32.
Nicolas Weeger 2007-12-01

gtk/text.c: Add missing write_media() calls in handling of admin messages.
   Results in news and rules not being displayed.  Fixes bug 1657000
MSW 2007-10-03

Fix for bug 1800702  - gdk_draw_drawable: assertion `src != NULL' failed.
gtk/gx11.c:  Call sdl_gen_map() or gtk_draw_map() based on displaymode in use.
gtk-v2/src/main.c: Call draw_map() instead of gtk_draw_map().  draw_map()
  will figure out what function (sdl, opengl, gtk) to call do actually
  draw the map.
MSW 2007-09-25
